--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Análisis de IA</title>
 </head>
 <body>
     <h1>Bienvenidos a la sección de análisis</h1>
-    <img src="{{ url_for('static', filename='images/plot.png') }}"> 
+    <img src="{{ url_for('static', filename='images/plot.png') }}" alt="Gráfica de Impacto de la IA">
+    <footer>
+        <hr>
+        <div class="social">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+        </div>
+        <p>&copy; Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
