--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
 </head>
 <body>
     <h1>Bienvenidos a la sección de contacto</h1>
+    <footer>
+        <hr>
+        <div class="social">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+        </div>
+        <p>&copy; Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
