--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <script src="https://kit.fontawesome.com/ed3df3892d.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Bienvenido o bienvenida!!!</h1>
+    <header>
+        <h1>¿Cómo está afectando la inteligencia artificial a los trabajos del futuro?</h1>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/analysis">Análisis</a></li>
+                <li><a href="/contact">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="intro">
+            <h2>Bienvenido a nuestro análisis de datos sobre IA</h2>
+            <p>En esta página, exploramos el impacto de la inteligencia artificial en el mercado laboral a lo largo de los años.</p>
+            <p>Acompáñanos en este recorrido informativo y visualiza cómo la IA está transformando el futuro del trabajo.</p>
+            <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExanZucWl4YmFpb3JzNWgxNmh0dnh0b2twa3BwbmdvMXdlajZyMjUxeiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/17tgpvlWvAVRQPFVpc/giphy.webp" alt="">
+        </section>
+
+        <section class="summary">
+            <h2>Gráficos Resumen</h2>
+            <div class="chart-container">
+                <!-- Aquí puedes agregar imágenes de gráficos o gráficos generados dinámicamente -->
+                <img src="static/images/summary_chart.png" alt="Gráfico Resumen">
+            </div>
+        </section>
+    </main>
+    <footer>
+        <hr>
+        <div class="social">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+        </div>
+        <p>&copy; 2024 Análisis de IA. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
