--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Análisis de IA</title>
+    <script src="https://kit.fontawesome.com/ed3df3892d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
-    <h1>Bienvenidos a la sección de análisis</h1>
-    <img src="{{ url_for('static', filename='images/plot.png') }}" alt="Gráfica de Impacto de la IA">
+    <header>
+        <h1>Impacto de la IA en los trabajos</h1>
+        <nav>
+            <ul>
+                <li><a href="/" >Inicio</a></li>
+                <li><a href="/analysis">Análisis</a></li>
+                <li><a href="/contact">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="analysis">
+            <h2>Análisis de Datos</h2>
+            <p>A continuación, exploramos varios factores que muestran cómo la IA ha impactado el mercado laboral a lo largo de los años.</p>
+            <div class="chart-container">
+                <img src="{{ url_for('static', filename='images/plot.png') }}" alt="Gráfica de Impacto de la IA">
+                <img src="{{ url_for('static', filename='images/plot2.png') }}" alt="Gráfica 2 de Impacto de la IA">
+                <img src="{{ url_for('static', filename='images/plot3.png') }}" alt="Gráfica 3 de Impacto de la IA">
+            </div>
+            <p>Observaciones y análisis de los datos:</p>
+            <ul>
+                <li>La adopción de IA ha ido en aumento, alcanzando un 40% en 2024.</li>
+                <li>Se espera que los empleos eliminados por la IA aumenten, pero también se crearán nuevos trabajos.</li>
+                <li>La inversión en software de IA ha crecido significativamente en los últimos años.</li>
+            </ul>
+        </section>
+    </main>
+
     <footer>
         <hr>
         <div class="social">
@@ -15,7 +44,8 @@
             <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
         </div>
-        <p>&copy; Todos los derechos reservados.</p>
+        <p>&copy; 2024 Análisis de IA. Todos los derechos reservados.</p>
     </footer>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 </html>
