--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -47,18 +47,20 @@
                 <h3>¿La IA siempre fue lo que es hoy en día?</h3>
                 <img src="{{ url_for('static', filename='images/plot4.png') }}" alt="Gráfica del Progreso de la IA">
                 <p>El progreso de la IA ha sido irregular, con pausas durante los inviernos, pero ha acelerado desde 2000, alcanzando grandes avances en los últimos años.</p>
-                <h1>¿Sabian que la IA a tenido dos 'inviernos' a lo largo de los años?</h1>
-                <p>1970 - 1980: Comienzo del primer "invierno de la IA", cuando las expectativas no se cumplieron y la financiación disminuyó.</p>
-                <p>1987 - 1993:  Comienzo del segundo "invierno de la IA", cuando los sistemas expertos no cumplieron con las expectativas.</p>
-                <h1>¿Como logro la IA salir de alli?</h1>
-                <ul>
-                    <li>1998: Redes Neuronales Convolusionales.</li>
-                    <li>2000 en adelante: Big Data</li>
-                    <li>2006: Algoritmos de Aprendizaje Profundo, GPU y Hardware Especializado:.</li>
-                    <li>2011: Asistentes virtuales (lanzamiento de Siri)</li>
-                    <li>2016: Deep Learning (Victoria de la red neuronal profunda de Google DeepMind sobre un campeón humano en el juego de Go)</li>
-                    <li>Actualidad: La nueva versión de Optimus lanzada en octubre de 2024 presenta importantes avances en inteligencia artificial y diseño físico, lo que le permite realizar una variedad más amplia de tareas y mejorar su interacción con los humanos.</li>
-                </ul>
+                <div class="curiosity">
+                    <h1>¿Sabian que la IA a tenido dos 'inviernos' a lo largo de los años?</h1>
+                    <p>1970 - 1980: Comienzo del primer "invierno de la IA", cuando las expectativas no se cumplieron y la financiación disminuyó.</p>
+                    <p>1987 - 1993:  Comienzo del segundo "invierno de la IA", cuando los sistemas expertos no cumplieron con las expectativas.</p>
+                    <h1>¿Como logro la IA salir de alli?</h1>
+                    <ul>
+                        <li>1998: Redes Neuronales Convolusionales.</li>
+                        <li>2000 en adelante: Big Data</li>
+                        <li>2006: Algoritmos de Aprendizaje Profundo, GPU y Hardware Especializado:.</li>
+                        <li>2011: Asistentes virtuales (lanzamiento de Siri)</li>
+                        <li>2016: Deep Learning (Victoria de la red neuronal profunda de Google DeepMind sobre un campeón humano en el juego de Go)</li>
+                        <li>Actualidad: La nueva versión de Optimus lanzada en octubre de 2024 presenta importantes avances en inteligencia artificial y diseño físico, lo que le permite realizar una variedad más amplia de tareas y mejorar su interacción con los humanos.</li>
+                    </ul>
+                </div>
             </div>
 
             <hr>
@@ -73,6 +75,7 @@
 
             <div class="extra-container">
                 <h2 class="extra-title">¡Extra! Habilidades Necesarias para el Futuro</h2>
+                <img src="https://y.yarn.co/7a551e98-bf89-4e21-a509-a3b4bf6313ec_text.gif" alt="extraaa">
                 <p class="extra-intro">En un mundo en constante cambio impulsado por la inteligencia artificial, aquí están las habilidades que te ayudarán a destacarte:</p>
                 <ul class="extra-skills-list">
                     <li><strong>Pensamiento Analítico:</strong> Capacidad para descomponer problemas complejos y tomar decisiones informadas.</li>
