--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             <h2>Bienvenido a nuestro análisis de datos sobre IA</h2>
             <p>En esta página, exploramos el impacto de la inteligencia artificial en el mercado laboral a lo largo de los años.</p>
             <p>Acompáñanos en este recorrido informativo y visualiza cómo la IA está transformando el futuro del trabajo.</p>
-            <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExanZucWl4YmFpb3JzNWgxNmh0dnh0b2twa3BwbmdvMXdlajZyMjUxeiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/17tgpvlWvAVRQPFVpc/giphy.webp" alt="IA GIF" class="intro-image">
+            <img src="https://gizmodo.com/app/uploads/2024/03/785af4c5978225b7d838d65a8b89a878.gif" alt="IA GIF" class="intro-image">
         </section>
 
         <section class="objective">
